--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: 4.12.0
   flutter: 
     sdk: flutter
+  intl: ^0.18.1  
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
