--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.6
-  firebase_core: 2.20.0
+  firebase_core: 2.21.0
   firebase_auth: 4.12.0
   intl: ^0.18.1
-
+  cloud_firestore: 4.12.2
+  firebase_storage: 11.4.1
+  nb_utils: 6.0.6
   flutter: 
     sdk: flutter
 
