--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cloud_firestore: 4.12.2
   firebase_storage: 11.4.1
   nb_utils: 6.0.6
+  image_picker: 1.0.4
   flutter: 
     sdk: flutter
 
